--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   image_picker: ^1.0.5
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
